# Works

./: .buildconfig  .gitignore  HeaderLicense.cpp  export_qt_project.sh  share_qt_project.sh
CpuAffinityTest/: AccumulatedAverage.h  CMakeLists.txt  CpuAffinityTest.cpp  TimingTest.cpp  TimingTest.h
CpuAffinityTest/PThreadClassLib/: .qmake.stash  CondVarClass.cpp  CondVarClass.h  CondVarCountedClass.cpp  CondVarCountedClass.h  Doxyfile  PBarrierClass.cpp  PBarrierClass.h  PMutexClass.cpp  PMutexClass.h  PRWLockClass.cpp  PRWLockClass.h  PThreadBaseException.h  PThreadClass.h  PThreadClassLib.cpp  PThreadClassLib.pro  PThreadClassLib.vcxproj  PThreadExtended.cpp  PthreadClassLib.dsw  PthreadClassLib.sln  PthreadClassLib.vcproj  SemaphoreClass.cpp  SemaphoreClass.h  ThreadException.cpp  ThreadException.h
DriverTest/: CMakeLists.txt  DriverTest.c
EclipseWorkspace/ParserTest/: CMakeLists.txt  DefTests.cpp  DefTests.h  DefTests.l  DefTests.y  DefTestsLex.cpp  DefTestsLex.h  Parser.cpp  Parser.h  Parser.l  Parser.y  ParserInterface.cpp  ParserInterface.h  ParserLex.cpp  ParserLex.h  ParserTest.cpp  ParserTest.pro
InOutTest/: CMakeLists.txt  InOutTest.cpp  InOutTest.pro  OutFormat.h  StringColorizer.h
PThreadClassSession/: CMakeLists.txt
PThreadClassSession/PThreadClassLib/: CMakeLists.txt  CondVarClass.cpp  CondVarClass.h  CondVarCountedClass.h  Makefile  PBarrierClass.cpp  PBarrierClass.h  PMutexClass.cpp  PMutexClass.h  PRWLockClass.cpp  PRWLockClass.h  PThreadBaseException.h  PThreadClass.cpp  PThreadClass.h  PThreadClassLib.cpp  PThreadClassLib.h  PThreadClassLib.pro  PThreadClassLib.pro.user.4.8-pre1  PThreadClassLib.pro.user.b9f96fa  PThreadClassLib.vcxproj  PThreadClassLib.vcxproj.filters  PThreadExtended.cpp  PThreadExtended.h  PthreadClassLib.dsp  PthreadClassLib.dsw  PthreadClassLib.sln  PthreadClassLib.vcproj  SemaphoreClass.cpp  SemaphoreClass.h  ThreadException.cpp  ThreadException.h  pthreadclasslib_global.h
PThreadClassSession/PThreadTest/: CMakeLists.txt  PThreadTest.cpp  PThreadTest.pro  PThreadTest.pro.user.4.8-pre1  PThreadTest.pro.user.b9f96fa  PThreadTest.vcxproj  PThreadTest.vcxproj.filters
PThreadClassSession/ThreadsPoolTest/: CMakeLists.txt  PThreadsPool.cpp  PoolThread.cpp  PoolThread.h  ThreadsPoolTest.cpp  ThreadsPoolTest.pro  ThreadsPoolTest.pro.user.4.8-pre1  ThreadsPoolTest.pro.user.b9f96fa  ThreadsPoolTest.vcxproj  ThreadsPoolTest.vcxproj.filters
PThreadClassSession/pthreads4w/: CMakeLists.txt
PingLinux/: CMakeLists.txt  PingLinux.c  PingLinux.pro
ScenInputTest/: CMakeLists.txt  ScenInputTest.cpp  ScenInputTest.pro  trajectory.txt
SockClassLibSession/: CMakeLists.txt  SockClassLibSession.sln
SockClassLibSession/MultiServTst/: CMakeLists.txt  MultiServTst.cpp  MultiServTst.pro  MultiServTst.pro.user.4.8-pre1  MultiServTst.pro.user.b9f96fa  MultiServTst.pro.user1  MultiServTst.vcxproj  MultiServTst.vcxproj.filters
SockClassLibSession/MultiServV6Tst/: CMakeLists.txt  MultiServV6Tst.cpp  MultiServV6Tst.pro  MultiServV6Tst.pro.user.4.8-pre1  MultiServV6Tst.pro.user.b9f96fa  MultiServV6Tst.vcxproj  MultiServV6Tst.vcxproj.filters
SockClassLibSession/MultiSockTst/: CMakeLists.txt  MultiSockTst.cpp  MultiSockTst.pro  MultiSockTst.pro.user.4.8-pre1  MultiSockTst.pro.user.b9f96fa  MultiSockTst.vcxproj  MultiSockTst.vcxproj.filters
SockClassLibSession/MultiSockV6Tst/: CMakeLists.txt  MultiSockV6Tst.cpp  MultiSockV6Tst.pro  MultiSockV6Tst.pro.user.4.8-pre1  MultiSockV6Tst.pro.user.b9f96fa  MultiSockV6Tst.vcxproj  MultiSockV6Tst.vcxproj.filters
SockClassLibSession/TcpServIpDualTst/: CMakeLists.txt  TcpServIpDualTst.cpp
SockClassLibSession/TcpServTst/: CMakeLists.txt  TcpServTst.cpp  TcpServTst.pro  TcpServTst.pro.user.4.8-pre1  TcpServTst.pro.user.b9f96fa  TcpServTst.vcxproj  TcpServTst.vcxproj.filters
SockClassLibSession/TcpServUdsTst/: CMakeLists.txt  TcpServUdsTst.cpp
SockClassLibSession/TcpServV6Tst/: CMakeLists.txt  TcpServV6Tst.cpp  TcpServV6Tst.pro  TcpServV6Tst.pro.user.4.8-pre1  TcpServV6Tst.pro.user.b9f96fa  TcpServV6Tst.vcxproj  TcpServV6Tst.vcxproj.filters
SockClassLibSession/TcpSockTst/: CMakeLists.txt  TcpSockTst.cpp  TcpSockTst.pro  TcpSockTst.pro.user.4.8-pre1  TcpSockTst.pro.user.b9f96fa  TcpSockTst.vcxproj  TcpSockTst.vcxproj.filters
SockClassLibSession/TcpSockUdsTst/: CMakeLists.txt  TcpSockUdsTst.cpp
SockClassLibSession/TcpSockV6Tst/: CMakeLists.txt  TcpSockV6Tst.cpp  TcpSockV6Tst.pro  TcpSockV6Tst.pro.user.229b914  TcpSockV6Tst.pro.user.4.8-pre1  TcpSockV6Tst.pro.user.b9f96fa  TcpSockV6Tst.vcxproj  TcpSockV6Tst.vcxproj.filters
SockClassLibSession/UdpServIpDualTst/: CMakeLists.txt  UdpServIpDualTst.cpp
SockClassLibSession/UdpServTst/: CMakeLists.txt  UdpServTst.cpp  UdpServTst.pro  UdpServTst.pro.user.4.8-pre1  UdpServTst.pro.user.b9f96fa  UdpServTst.vcxproj  UdpServTst.vcxproj.filters
SockClassLibSession/UdpServUdsTst/: CMakeLists.txt  UdpServUdsTst.cpp
SockClassLibSession/UdpServV6Tst/: CMakeLists.txt  UdpServV6Tst.cpp  UdpServV6Tst.pro  UdpServV6Tst.pro.user.4.8-pre1  UdpServV6Tst.vcxproj  UdpServV6Tst.vcxproj.filters
SockClassLibSession/UdpSockTst/: CMakeLists.txt  UdpSockTst.cpp  UdpSockTst.pro  UdpSockTst.pro.user.4.8-pre1  UdpSockTst.vcxproj  UdpSockTst.vcxproj.filters
SockClassLibSession/UdpSockUdsTst/: CMakeLists.txt  UdpSockUdsTst.cpp
SockClassLibSession/UdpSockV6Tst/: CMakeLists.txt  UdpSockV6Tst.cpp  UdpSockV6Tst.pro  UdpSockV6Tst.pro.user.229b914  UdpSockV6Tst.pro.user.4.8-pre1  UdpSockV6Tst.vcxproj  UdpSockV6Tst.vcxproj.filters
StatesMachineTest/: CMakeLists.txt  StateMachine.h  StateMachineTestClass.cpp  StateMachineTestClass.h  StatesMachineTest.cpp  StatesTable.h  StringStateMachineTestClass.cpp  StringStateMachineTestClass.h  StringTestSystemStates.cpp  StringTestSystemStates.h  SystemState.h  TestDefinitions.h  TestSystemStates.cpp  TestSystemStates.h
TestDriver/: CMakeLists.txt  TestDriver.cpp  testdrv-ioctl.h
ThreadClassWorkspace/: CMakeLists.txt  ThreadClassWorkspace.sln  deploy.sh
XsdTest/: CMakeLists.txt  XsdExample.cpp  XsdExample.h  XsdExample.xsd  XsdTest.cpp
(+1881 files in other folders)
