cmake_minimum_required(VERSION 3.16)

project(SockClassLibCMake)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
if(UNIX)
    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-fPIC")
    set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-fPIC")
else()
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS  _WINSOCK_DEPRECATED_NO_WARNINGS _USE_MATH_DEFINES)
endif()

IF("${CMAKE_CXX_COMPILER}" STREQUAL "/usr/bin/clang++")
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/DebugClang)
    ENDIF()
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/ReleaseClang)
    ENDIF()
ENDIF()

IF("${CMAKE_CXX_COMPILER}" STREQUAL "/usr/bin/g++")
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/Debug)
    ENDIF()
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/Release)
    ENDIF()
ENDIF()

IF("${CMAKE_CXX_COMPILER}" STREQUAL "/opt/intel/oneapi/compiler/latest/linux/bin/icpx")
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/DebugIntel)
    ENDIF()
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/ReleaseIntel)
    ENDIF()
ENDIF()

if(NOT UNIX)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/Debug)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/Release)
endif()

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE})

if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    set(LINKDIR ${${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}})
elseif("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
    set(LINKDIR ${${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE}})
endif()

set(CMAKE_SKIP_BUILD_RPATH false)
set(CMAKE_SKIP_RPATH false)
if("${CMAKE_CXX_COMPILER}" STREQUAL "/opt/intel/oneapi/compiler/latest/linux/bin/icpxc")
    set(CMAKE_BUILD_RPATH "/opt/intel/oneapi/compiler/latest/linux/lib/intel64")
endif()

add_subdirectory(sockclasslib)
add_subdirectory(MultiServTst)
add_subdirectory(MultiServV6Tst)
add_subdirectory(MultiSockTst)
add_subdirectory(MultiSockV6Tst)
add_subdirectory(TcpServTst)
add_subdirectory(TcpServV6Tst)
add_subdirectory(TcpSockTst)
add_subdirectory(TcpSockV6Tst)
add_subdirectory(UdpServTst)
add_subdirectory(UdpServV6Tst)
add_subdirectory(UdpSockTst)
add_subdirectory(UdpSockV6Tst)
