cmake_minimum_required(VERSION 3.16)

project(ParserTest LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

IF("${CMAKE_CXX_COMPILER}" STREQUAL "/usr/bin/clang++")
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../DebugClang)
    ENDIF()
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../ReleaseClang)
    ENDIF()
ENDIF()

IF("${CMAKE_CXX_COMPILER}" STREQUAL "/usr/bin/g++")
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../Debug)
    ENDIF()
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../Release)
    ENDIF()
ENDIF()

IF("${CMAKE_CXX_COMPILER}" STREQUAL "/home/opt/intel/sw_dev_tools/bin/icpc")
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../DebugIntel)
    ENDIF()
    IF("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../ReleaseIntel)
    ENDIF()
ENDIF()


find_package(BISON REQUIRED)
find_package(FLEX REQUIRED)

FLEX_TARGET(LexDefTests ${CMAKE_SOURCE_DIR}/DefTests.l ${CMAKE_SOURCE_DIR}/DefTestsLex.cpp
    DEFINES_FILE ${CMAKE_SOURCE_DIR}/DefTestsLex.h)
FLEX_TARGET(LexParser ${CMAKE_SOURCE_DIR}/Parser.l ${CMAKE_CURRENT_BINARY_DIR}/ParserLex.cpp
    DEFINES_FILE ${CMAKE_SOURCE_DIR}/ParserLex.h)
BISON_TARGET(BisonDefTests DefTests.y ${CMAKE_SOURCE_DIR}/DefTests.cpp
    DEFINES_FILE ${CMAKE_SOURCE_DIR}/DefTests.h)
BISON_TARGET(BisonParser Parser.y ${CMAKE_SOURCE_DIR}/Parser.cpp
    DEFINES_FILE ${CMAKE_SOURCE_DIR}/Parser.h)

ADD_FLEX_BISON_DEPENDENCY(LexDefTests BisonDefTests)
ADD_FLEX_BISON_DEPENDENCY(LexParser BisonParser)

add_executable(ParserTest ParserTest.cpp
    ${BISON_BisonDefTests_OUTPUTS}
    ${BISON_BisonParser_OUTPUTS}
    ${FLEX_LexDefTests_OUTPUTS}
    ${FLEX_LexParser_OUTPUTS}
    BitParserInterface.cpp BitParserInterface.h)


